# kienzlefon

./: .gitignore  CHANGELOG.md  README.md  kienzlefon-installer.sh  pyproject.toml  telepraxis-receive.php  uebergabe-api.md
config/: kienzlefon.toml.example
demo-webseite/: index-kienzlefon-demo-v3.php  index-kienzlefon-demo-v4.php  index-kienzlefon-demo-v5 copy.php  index-kienzlefon-demo-v6.php  index.php  index_old.php  index_old2.php  telepraxis-app-demo.php  telepraxis-receive.php  telepraxis-sms.php
docs/: ANSAGEN.md  ARCHITEKTUR.md  IVR.md  TELEPRAXIS.md
kienzlefon/: __init__.py  admin.py  agi.py  asterisk.py  cli.py  config.py  crypto.py  dialing.py  errors.py  health.py  ivr.py  migration.py  models.py  prompts.py  spool.py  worker.py
tests/: __init__.py  conftest.py  test_admin.py  test_agi.py  test_asterisk.py  test_config.py  test_crypto.py  test_dialing.py  test_health.py  test_installer.py  test_ivr.py  test_migration.py  test_prompts.py  test_spool.py  test_worker.py
