# kienzlefon
# Version: 1.9.3
# Changelog:
# - 1.9.3: Patchrelease ohne Telepraxis-Ausgabe fuer vollstaendig inhaltslose Anrufe.
# - 1.9.2: Patchrelease fuer fehlerfreie Nicht-Demo-Updates.
# - 1.9.1: Patchrelease fuer die korrigierte Asterisk-wav16-Installationspruefung.
# - 1.9: Optionale Rufnummernanonymisierung fuer Demoausgaben veroeffentlicht.
# - 1.8.3: Patchrelease fuer verlustfreie Teiltranskription bei leeren Feldern.
# - 1.8.2: Patchrelease fuer Bereitschaftsdienst-Logik und Ansagetexte.
# - 1.8.1: Patchrelease fuer gruppenschreibbare Telepraxis-Ausgabedateien.
# - 1.8: Demo-Dateiausgabe und Bereinigung leerer Abbrueche veroeffentlicht.
# - 1.7.1: Rotes Telefon als Mitglied der Sonderqueue veroeffentlicht.
# - 1.7: Sonderqueue, Caller-ID-Normalisierung und optionales rotes Telefon veroeffentlicht.
# - 1.6.2: Patchrelease fuer die korrigierte AGI-Hangup-Behandlung.
# - 1.6.1: Patchrelease fuer die korrigierte FFmpeg-Installationspruefung.
# - 1.6: Feldabhaengige Whisper-Modellkonfiguration veroeffentlicht.
# - 1.5: Hochwertige normalisierte 16-kHz-Ansagenaufnahmen veroeffentlicht.
# - 1.4: PIN-freies, klareres internes Ansagen-IVR veroeffentlicht.
# - 1.3: Ansagen-IVR, Wahlpruefung und Zusatztelefonie veroeffentlicht.
# - 1.2: Release mit korrigierter Zeitkonfiguration und kompakten Zeitansagen.
# - 1.1: Release mit freigegebenen TTS-, IVR- und Installeranpassungen.
# - 1.0: Erstveroeffentlichung mit IVR, Whisper-Worker und Telepraxis-Dateiausgabe.

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "kienzlefon"
version = "1.9.3"
description = "Konfigurationsgesteuertes Asterisk-IVR mit lokaler Whisper-Transkription"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "cryptography>=44,<50",
  "faster-whisper>=1.1,<2",
  "piper-tts>=1.4,<2",
]

[project.optional-dependencies]
dev = ["pytest>=8,<10", "ruff>=0.9,<1"]

[project.scripts]
kienzlefon-agi = "kienzlefon.cli:agi_main"
kienzlefon-worker = "kienzlefon.cli:worker_main"
kienzlefon-ansagen = "kienzlefon.cli:prompts_main"
kienzlefon-config = "kienzlefon.cli:config_main"
kienzlefon-status = "kienzlefon.cli:status_main"
kienzlefon-modell-laden = "kienzlefon.cli:model_main"
kienzlefon-asterisk = "kienzlefon.cli:asterisk_main"
kienzlefon-fehler = "kienzlefon.cli:error_main"
kienzlefon-ansagen-ivr = "kienzlefon.cli:admin_main"
kienzlefon-wahlpruefung = "kienzlefon.cli:dial_main"
kienzlefon-callerid = "kienzlefon.cli:callerid_main"
kienzlefon-migration = "kienzlefon.cli:migrate_main"


[tool.setuptools.packages.find]
include = ["kienzlefon*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
